# Liveline

./: .env  .gitignore  pyproject.toml  tasks.py
database/: database.json
liveline/: __init__.py  app.py
liveline/blueprints/: __init__.py
liveline/blueprints/auth/: auth.py
liveline/blueprints/host/: experimental_host.py  host.py
liveline/blueprints/profile/: profile.py
liveline/blueprints/room/: room.py
liveline/blueprints/viewer/: viewer.py
liveline/database/: __init__.py  database.py
liveline/jobs/: jobs.py
liveline/logger/: logger.py
liveline/presentation/: __init__.py  presentation.py  slide.py  slides.py  widget.py
liveline/sockets/: __init__.py  sockets.py
liveline/static/js/: drag_drop.js  editor_view.js  host_view.js  http_get.js  jquery.textfill.min.js  participant.js  present.js  presentation_creator.js  presentation_slides.js  profile_page.js  render_slides.js  viewer_view.js  widgetbased_slides.js
liveline/static/styles/: style.css  style.css.map  style.scss
liveline/templates/: base.html  home.html
liveline/templates/auth/: base.html  signup.html
liveline/templates/host/: presentation.html  presentation_creator.html  presentation_creator_confirmation.html
liveline/templates/host/experimental/: presentation_creator.html  presentation_creator_confirmation.html
liveline/templates/profile/: profile.html
liveline/templates/viewer/: join_presentation.html  presentation_slides.html  presentation_widgets.html
tests/: test_liveline.py
